--- a/auth.html
+++ b/auth.html
@@ -48,19 +48,19 @@
 										<div class="section text-center">
 											<h4 class="mb-3 pb-3">Գրանցվել</h4>
 											<div class="form-group">
-												<input type="text" class="form-style" placeholder="Անուն">
+												<input type="text" id="signup-name" class="form-style" placeholder="Անուն">
 												<i class="input-icon uil uil-user"></i>
 											</div>
 											<div class="form-group mt-2">
-												<input type="text" class="form-style" placeholder="Ազգանուն">
+												<input type="text" id="signup-lastname" class="form-style" placeholder="Ազգանուն">
 												<i class="input-icon uil uil-user"></i>
 											</div>
 											<div class="form-group mt-2">
-												<input type="email" class="form-style" placeholder="Էլ․հասցե">
+												<input type="email" id="signup-email" class="form-style" placeholder="Էլ․հասցե">
 												<i class="input-icon uil uil-at"></i>
 											</div>
 											<div class="form-group mt-2">
-												<input type="password" class="form-style" placeholder="Գաղտնաբառ">
+												<input type="password" id="signup-password" class="form-style" placeholder="Գաղտնաբառ">
 												<i class="input-icon uil uil-lock-alt"></i>
 											</div>
 											<button onclick="signUp()" class="btn mt-4">Գրանցվել</button>
@@ -76,7 +76,11 @@
 	</div>
 
 	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+
+
 	<script src="./js/auth.js"></script>
 </body>
 
