--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Կապ</a>
                  <a href="chat.html" class="nav-item nav-link">Զրույց</a> 
-                 <a href="auth.html" class="nav-item nav-link">Մուտք</a>
+                 <a href="auth.html" class="nav-item nav-link" id="login-btn">Մուտք</a>
+                 <a href="/" class="nav-item nav-link" onclick="signOut()" id="logout-btn">Ելք</a>
 
             </div>
             <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Եղիր առողջ մեզ հետ</a>
@@ -681,11 +682,15 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script> -->
-    <script type="module" src="js/firebase.js"> </script>
+  
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+	<script src="./js/auth.js"></script>
     <script>
         function submitForm() {
             var name = document.getElementById('name').value;
