--- a/about.html
+++ b/about.html
@@ -394,6 +394,7 @@
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
