--- a/service.html
+++ b/service.html
@@ -270,7 +270,7 @@
                                         style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
+                                    <select class="form-select border-0" style="height: 55px;" id="doctor-select">
                                         <option selected>Ընտրեք բժիշկ</option>
                                         <option value="1">Բիայնա Սուխուդյան</option>
                                         <option value="2">Արամ Բադալյան</option>
@@ -300,7 +300,7 @@
                                         placeholder="Նկարագրեք ձեր խնդիրը"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit" onclick="submitForm()">Ուղարկել</button>
+                                    <button class="btn btn-primary w-100 py-3" onclick="submitForm(event)">Ուղարկել</button>
                                 </div>
                             </div>
                         </form>
@@ -437,21 +437,11 @@
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        function submitForm() {
-            var name = document.getElementById('name').value;
-            var email = document.getElementById('email').value;
-            var phone = document.getElementById('phone').value;
-            var message = document.getElementById('message').value;
+
     
-            var mailtoLink = 'mailto:syuzi_navoyan@mail.ru' +
-                '?subject=' + encodeURIComponent('Contact Form Submission') +
-                '&body=' + encodeURIComponent('Name: ' + name + '\nEmail: ' + email + '\nPhone: ' + phone + '\nMessage: ' + message);
-    
-            window.location.href = mailtoLink;
-        }
-    </script>
+
 </body>
 
 </html>
