fix: fixed chat issue

--- a/chat.html
+++ b/chat.html
@@ -193,5 +193,5 @@
 
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
- <script src="./js/chat.js"></script>
+ <script type="module" src="./js/chat.js"></script>
 </body>
