--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Կապ</a>
+                <a href="video.html" class="nav-item nav-link">Վիդեոկապ</a>
                  <a href="chat.html" class="nav-item nav-link">Զրույց</a> 
                  <a href="auth.html" class="nav-item nav-link" id="login-btn">Մուտք</a>
                  <a href="/" class="nav-item nav-link" onclick="signOut()" id="logout-btn">Ելք</a>
