--- a/chat.html
+++ b/chat.html
@@ -190,8 +190,10 @@
         </div>
     </div>
  </footer>
-
- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+ <script type="module" src="./js/auth.js"></script>
  <script type="module" src="./js/chat.js"></script>
 </body>
